--- a/HTML-CSS/Desafios/desafio010/estilos/style.css
+++ b/HTML-CSS/Desafios/desafio010/estilos/style.css
@@ -69,6 +69,7 @@ header > p {
     color: white;
     max-width: 600px;
     margin: auto;
+    padding-bottom: 50px;
     padding-right: 10px;
     padding-left: 10px;
 }
