--- a/HTML-CSS/Desafios/desafio011/estilo/style.css
+++ b/HTML-CSS/Desafios/desafio011/estilo/style.css
@@ -1,48 +1,88 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Quicksand:wght@300..700&display=swap');
+
+:root {
+    --fonte1: arial, verdana, helvetica, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3: 'Quicksand', sans-serif;
+}
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
-html, body {
+ body {
     min-height: 100vh;
-    background-color: rgba(226, 226, 74, 0.644);
 }
 
 header {
+    font-size: 2em;
     background-color: black;
     color: white;
     text-align: center;
 }
 
 header > h1 {
+    font-family: var(--fonte2);
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
 }
 
 header > p {
+    font-family: var(--fonte3);
+    font-size: 0.5em;
     padding-bottom: 50px;
 }
 
 section {
+    font-family: var(--fonte3);
+    font-size: 2em;
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 35px;
+    
+}
+
+section > p {
+    padding-bottom: 2em;
+}
+
+section#img1 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img2 {
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 section.normal {
-    background-color: white;
+    background-color: antiquewhite;
 }
 
-section.imagem {
+    p.teste {
+        text-align: right;
+        padding-right: 100px;
+    }
+
+    section.imagem {
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.315);
     background-color: gray;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
+   display: inline-block;
+   padding: 5px;
     background-color: rgba(0, 0, 0, 0.39);
+    color: white;
+    border-radius: 5px;
 }
 
 a {
