--- a/HTML-CSS/Exercicios/ex24/desafioGrid/style.css
+++ b/HTML-CSS/Exercicios/ex24/desafioGrid/style.css
@@ -1,33 +1,42 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 .template {
+    width: 100vw;
+    height: 100vh;
     display: grid;
-    grid-template-rows: repeat(17, 40px);
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: 80px 40px 1fr 40px;
+    grid-template-columns: 1fr 450px;
 }
 
 .header {
     text-align: center;
     background-color: red;
-    grid-area: 1 / 1 / 3 / -1;
+    grid-area: 1 / 1 / 2 / -1;
 }
 
 .menu {
     text-align: center;
     background-color: green;
-    grid-area: 3 / 1 / 3 / -1;
+    grid-area: 2 / 1 / 3 / -1;
 }
 
 .main {
     text-align: center;
     background-color: blue;
-    grid-area: 4 / 1 / 17 / 6;
+    grid-area: 3 / 1 / -2 / 2;
 }
 
 .side-content {
     background-color: yellow;
-    grid-area: 4 / -3 / 17 / -1;
+    grid-area: 3 / -2 / -2 / -1;
 }
 
 .footer {
     background-color: purple;
-    grid-area: 17 / 1 / 18 / -1;
+    grid-area: -2 / 1 / -1 / -1;
 }
